# ans

./: .gitignore  MANIFEST.in  README.md  ans_test.conf  pyproject.toml  setup.cfg
ANT_scripts/: ANT_design.py  ANT_directionality.py  ANT_gen_reversed_EGFs.py  ANT_getData.py  ANT_mseed2sac.py  ANT_seasonality.py  ANT_stack.py  ANT_symmetrize.py  ANT_xcorrelate.py  bandpass_over.py  decimate.py  getStationxml.py  oneBit.py  plot_continental_map.py  plot_global_map.csh  plot_regional_map.py  removeChannel.py  removeResponse.py  whiten.py  writeHeaders.py
ANT_scripts/plates/: ._README.txt  ._plates-original.txt
ANT_scripts/temp/: ._ANT_directionality.py  ._ANT_directionality_old.py  ._ANT_directionality_subsets.py  ._ANT_seasonality_stack.py  ._ANT_seasonality_stack001.py  ._ANT_seasonality_stack300.py  ._ANT_seasonality_stack600.py  ANT_directionality.py  ANT_directionality_old.py  ANT_directionality_subsets.py  ANT_seasonality_stack.py  ANT_seasonality_stack001.py  ANT_seasonality_stack300.py  ANT_seasonality_stack600.py
src/ans/: about.html  config.py  dependency.py  download.py  gui.py  gui.qss  main.py  mseed2sac.py  ncf2egf.py  plot.py  proc.py  sac2ncf.py
src/ans/data/: assets.afdesign
test/: ans.conf
test2/: ans.conf
test2/.ans/: GO.ONI.HHZ  II.KIV.BHZ  II.RAYN.BHZ  II.UOSS.BHZ  IU.GNI.BHZ  KO.GURO.HHZ  KO.KARS.HHZ  KO.SIRT.BHZ  KZ.ABKAR.BHZ  stations.dat.BHZ_service.iris.edu.xml  stations.dat.HHZ_service.iris.edu.xml
test2/mseeds/16001000000/: GO.ONI.HHZ  II.KIV.00.BHZ__20160101T000000Z__20160102T000000Z.mseed  II.KIV.BHZ  II.RAYN.BHZ  II.UOSS.BHZ  (+7 more)
(+1 files in other folders)
