[metadata]
name = ans
version = 0.0.0
author = omid-b
author_email = omid.bagherpur@gmail.com
description = ambient noise seismology using python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omid-b/ans
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.19
    pandas>=1.1
    obspy>=1.2
    PyQt5==5.15.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ans = ans.main:main

