[metadata]
name = ans
version = 0.0.2
author = omid-b
author_email = omid.bagherpur@gmail.com
description = ambient noise seismology using python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/omid-b/ans
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3
install_requires =
    numpy
    pandas
    obspy
    PyQt5
    Cython
    basemap

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ans = ans.main:main

